# cmake-template

./: .gitignore  CMakeLists.txt  README.md
include/: fmt_wrapper.h
src/: CMakeLists.txt  fmt_wrapper.cc  main.cpp
